Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101049

/permissive- not passed causes compiling errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.3.0 Beta3
    • 6.3.0 Alpha, 6.3.0 Beta1, 6.3.0 Beta2
    • Build System
    • None
    • Windows 10
    • Windows

      I am not able to compile my projects with MSVC2019_64 using CMake or QMake. I am always getting an error stating "On MSVC you must pass the /permissive- option to the compiler".

      I am not even able to compile Qt Example projects.

      I can see that permissive option is passed to CXXFLAGS in the generatd Makefile.Debug file but still I am getting the error.

      I have attached an screenshot of my compiler configs in QtCreator.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            celandre dzimiwine celandre
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes